fix overflow on woven button

--- a/styles/main.css
+++ b/styles/main.css
@@ -171,7 +171,6 @@ a {
 }
 
 .woven {
-  margin: 1rem;
   background: #ccc url(//unsplash.it/id/1043/500) center/cover;
   color: #fff;
   align-items: center;
